k8/dev/auth/kc/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.5
          imagePullPolicy: IfNotPresent
          args: ["start-dev"]
          ports:
            - containerPort: 8080
