k8/dev/auth/kc/service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: auth
spec:
  type: NodePort
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
